url text message fixed

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 overflow: hidden;
                 min-height: 100vh;
                 background-color: rgba(0, 0, 0, 0.5);
+                
             }
             .video-bg {
                 position: absolute;
@@ -94,7 +95,11 @@
                     src="https://video-public.canva.com/VAEXazshK64/v/3229262fa4.mp4"
                 />
             </video>
-
+            <img
+                src="images/customcolor_logo_transparent_background (1).png"
+                alt=""
+                style="width: 200px; aspect-ratio: 2; z-index: -5;"
+            />
             <header class="u-clearfix u-header u-header" id="sec-9623">
                 <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
                     <a
