my app finished

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <img
                 src="images/customcolor_logo_transparent_background (1).png"
                 alt=""
-                style="width: 200px; aspect-ratio: 2; z-index: -5;"
+                style="width: 200px; aspect-ratio: 2; z-index: -5; position:absolute;"
             />
             <header class="u-clearfix u-header u-header" id="sec-9623">
                 <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
