text message logo view updated

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
             name="keywords"
             content="Make learning fun!, About Us, INTUITIVE"
         />
-        <meta name="description" content="" />
+        <meta
+            name="description"
+            content="Shining Bright Tutors - Online Education Service"
+        />
         <meta
             name="page_type"
             content="np-template-header-footer-from-plugin"
@@ -71,7 +74,6 @@
                 overflow: hidden;
                 min-height: 100vh;
                 background-color: rgba(0, 0, 0, 0.5);
-                
             }
             .video-bg {
                 position: absolute;
@@ -98,7 +100,12 @@
             <img
                 src="images/customcolor_logo_transparent_background (1).png"
                 alt=""
-                style="width: 200px; aspect-ratio: 2; z-index: -5; position:absolute;"
+                style="
+                    width: 200px;
+                    aspect-ratio: 2;
+                    z-index: -5;
+                    position: absolute;
+                "
             />
             <header class="u-clearfix u-header u-header" id="sec-9623">
                 <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
