text message logo view updated

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             content="Shining Bright Tutors - Online Education Service"
         />
         <meta
+            content="Shining Bright Tutors - Online Education Service"
+            property="og:title"
+        />
+        <meta
             name="page_type"
             content="np-template-header-footer-from-plugin"
         />
