text message logo view updated

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="utf-8" />
         <meta
+            property="og:image"
+            content="customcolor_logo_transparent_background"
+        />
+        <meta
             name="keywords"
             content="Make learning fun!, About Us, INTUITIVE"
         />
