--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta
             property="og:image"
-            content="customcolor_logo_transparent_background"
+            content="https://www.shiningbrighttutors.com/customcolor_logo_transparent_background (1).png"
         />
         <meta
             name="keywords"
