text message logo view updated

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 />
             </video>
             <img
-                src="images/customcolor_logo_transparent_background (1).png"
+                src="images/facebooklogo.png"
                 alt=""
                 style="
                     width: 200px;
