--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta
             property="og:image"
-            content="https://www.shiningbrighttutors.com/image/facebooklogo.png"
+            content="https://www.shiningbrighttutors.com/images/facebooklogo.png"
         />
         <meta
             name="keywords"
