--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             }
         </script>
         <meta name="theme-color" content="#478ac9" />
-        <meta property="og:title" content="Home" />
+        <meta property="og:title" content="Shining Bright Tutors" />
         <meta property="og:type" content="website" />
     </head>
     <body class="u-body u-xl-mode home2">
